# pdc

./: .gitignore  LICENSE  consumer1.py  consumer2.py  database_setup.py  docker-compose.yaml  generate_csv.py  kafka_test.py  producer.py  pyproject.toml  queries.sql  requirements.txt
shared/: settings.py  stock_variation.py
